--- a/index.html
+++ b/index.html
@@ -1,203 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vimalraj | Software Developer Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-* { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-body { background: radial-gradient(circle at top, #020617, #0f172a); color: #e5e7eb; line-height: 1.6; }
-body.light { background: #f8fafc; color: #020617; }
-body.light .card { background: #ffffff; color: #020617; }
-
-.robot-grid { position: fixed; inset: 0; pointer-events: none; background:
-  linear-gradient(transparent 95%, rgba(56,189,248,0.08) 96%),
-  linear-gradient(90deg, transparent 95%, rgba(56,189,248,0.08) 96%);
-  background-size: 40px 40px; animation: gridMove 20s linear infinite; }
-@keyframes gridMove { from { background-position: 0 0, 0 0; } to { background-position: 40px 40px, 40px 40px; } }
-
-.robot { position: fixed; bottom: 30px; right: 30px; width: 70px; height: 70px; background: url('https://cdn-icons-png.flaticon.com/512/4712/4712109.png') center/contain no-repeat; animation: floatRobot 4s ease-in-out infinite; cursor: pointer; z-index: 999; }
-@keyframes floatRobot { 0%{transform:translateY(0)}50%{transform:translateY(-15px)}100%{transform:translateY(0)} }
-.robot-msg { position: fixed; bottom: 120px; right: 30px; background:#020617; padding:12px 16px; border-radius:12px; font-size:14px; display:none; }
-
-header { min-height: 100vh; display: flex; align-items: center; justify-content: center; text-align: center; }
-header h1 { font-size: 3rem; }
-
-.nav { position: fixed; top: 20px; right: 40px; display: flex; gap: 20px; z-index: 1000; }
-.nav a { color: #e5e7eb; text-decoration: none; }
-
-section { padding: 90px 12%; }
-h2 { font-size: 2.2rem; margin-bottom: 2.5rem; }
-
-.skills, .projects, .mini-projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 35px; }
-.card, .mini { background: #020617; padding: 28px; border-radius: 18px; text-align: center; transition: transform .3s; }
-.card:hover, .mini:hover { transform: translateY(-8px); }
-
-.btn { display:inline-block; padding:12px 28px; background:#38bdf8; color:#020617; border-radius:30px; text-decoration:none; }
-
-footer { text-align:center; padding:20px; color:#94a3b8; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Vimalraj | Software Developer Portfolio</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+body{background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);color:#f0f0f0;line-height:1.6;overflow-x:hidden;transition:background 0.5s,color 0.5s;}
+header,h2,p,.card,.mini,.btn,footer{transition:color 0.5s,background 0.5s;}
+.robot-grid{position:fixed;inset:0;pointer-events:none;z-index:0;}
+.moving-light{position:absolute;width:8px;height:8px;border-radius:50%;background:rgba(0,255,255,0.7);pointer-events:none;box-shadow:0 0 15px rgba(0,255,255,0.7);animation:moveLight 10s linear infinite;}
+@keyframes moveLight{0%{transform:translate(0,0);}50%{transform:translate(50px,50px);}100%{transform:translate(0,0);}}
+.robot{position:fixed;bottom:30px;right:30px;width:70px;height:70px;background:url('https://cdn-icons-png.flaticon.com/512/4712/4712109.png') center/contain no-repeat;animation:floatRobot 4s ease-in-out infinite;cursor:pointer;z-index:999;}
+@keyframes floatRobot{0%{transform:translateY(0)}50%{transform:translateY(-15px)}100%{transform:translateY(0)}}
+.robot-msg{position:fixed;bottom:120px;right:30px;background:rgba(0,0,0,0.85);padding:12px 16px;border-radius:12px;font-size:14px;display:none;color:#f0f0f0;font-weight:600;z-index:1000;box-shadow:0 4px 15px rgba(0,255,255,0.5);backdrop-filter:blur(5px);}
+header{min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;background:rgba(0,0,0,0.3);backdrop-filter:blur(10px);border-radius:20px;margin:20px;}
+header h1{font-size:3rem;color:#00f0ff;}
+.nav{position:fixed;top:20px;right:40px;display:flex;gap:20px;z-index:1000;}
+.nav a{color:#00f0ff;text-decoration:none;font-weight:600;}
+section{padding:90px 12%;}
+h2{font-size:2.2rem;margin-bottom:2.5rem;color:#00f0ff;}
+.skills,.projects,.mini-projects{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:35px;}
+.card,.mini{background:rgba(0,0,0,0.6);padding:28px;border-radius:18px;text-align:center;transition:transform .3s,background 0.5s,color 0.5s;box-shadow:0 8px 20px rgba(0,255,255,0.2);}
+.card:hover,.mini:hover{transform:translateY(-8px);box-shadow:0 12px 30px rgba(0,255,255,0.4);}
+.card img,.mini img{width:60px;height:60px;margin-bottom:12px;object-fit:contain;filter:brightness(1);transition:filter 0.5s;}
+.btn{display:inline-block;padding:12px 28px;background:#00f0ff;color:#020617;border-radius:30px;text-decoration:none;font-weight:600;box-shadow:0 6px 20px rgba(0,255,255,0.3);}
+.btn:hover{box-shadow:0 8px 30px rgba(0,255,255,0.5);}
+footer{text-align:center;padding:20px;color:#00f0ff;}
 </style>
 </head>
 <body>
-<div class="robot-grid"></div>
-<div class="robot" onclick="robotTalk()"></div>
+<div class="robot-grid" id="robotGrid"></div>
+<div class="robot" id="interactiveObject"></div>
 <div class="robot-msg" id="robotMsg"></div>
-
 <div class="nav">
-  <a href="#">Home</a>
-  <a href="#skills">Skills</a>
-  <a href="#projects">Projects</a>
-  <a href="#mini">Mini Apps</a>
+<a href="#">Home</a>
+<a href="#skills">Skills</a>
+<a href="#projects">Projects</a>
+<a href="#mini">Mini Apps</a>
 </div>
-
 <header>
-  <div>
-    <h1>Hi, I'm Vimalraj</h1>
-    <p id="typing"></p>
-    <a href="#projects" class="btn">View My Work</a>
-  </div>
+<div>
+<h1>Hi, I'm Vimalraj</h1>
+<p id="typing"></p>
+<a href="#projects" class="btn">View My Work</a>
+</div>
 </header>
-
 <section id="summary">
-  <h2>Executive Summary</h2>
-  <p style="max-width:720px;margin:20px auto;color:#cbd5f5;font-size:1.05rem;line-height:1.6;">
-    Aspiring Software Developer with strong foundations in Java, modern web technologies, and problem-solving. Passionate about building clean, interactive, and scalable applications with a focus on user experience and practical business use cases.
-  </p>
+<h2>Executive Summary</h2>
+<p style="max-width:720px;margin:20px auto;line-height:1.6;">Aspiring Software Developer with strong foundations in Java, modern web technologies, and problem-solving. Passionate about building clean, interactive, and scalable applications with a focus on user experience and practical business use cases.</p>
 </section>
-
 <section id="skills">
-  <h2>Skills</h2>
-  <div class="skills">
-    <div class="card">Java</div>
-    <div class="card">HTML</div>
-    <div class="card">CSS</div>
-    <div class="card">JavaScript</div>
-    <div class="card">React.js</div>
-    <div class="card">MySQL</div>
-    <div class="card">Data Structures</div>
-    <div class="card">OOP Concepts</div>
-  </div>
+<h2>Skills</h2>
+<div class="skills">
+<div class="card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java">Java</div>
+<div class="card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">HTML</div>
+<div class="card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">CSS</div>
+<div class="card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">JavaScript</div>
+<div class="card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React">React.js</div>
+<div class="card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">MySQL</div>
+<div class="card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git">Git</div>
+<div class="card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python">Python</div>
+</div>
 </section>
-
 <section id="projects">
-  <h2>Projects</h2>
-  <div class="projects">
-    <div class="card">Quiz Application<br/><small>JavaScript • DOM • Logic</small></div>
-    <div class="card">Text to Speech Converter<br/><small>Web Speech API</small></div>
-    <div class="card">Weather Forecast App<br/><small>API • Async JS</small></div>
-    <div class="card">Interactive Login Page<br/><small>HTML • CSS • JavaScript (Validation)</small></div>
-  </div>
+<h2>Projects</h2>
+<div class="projects">
+<div class="card"><img src="https://cdn-icons-png.flaticon.com/512/2942/2942863.png" alt="Quiz App">Quiz Application<br/><small>JavaScript • DOM • Logic</small></div>
+<div class="card"><img src="https://cdn-icons-png.flaticon.com/512/3064/3064197.png" alt="Text to Speech">Text to Speech Converter<br/><small>Web Speech API</small></div>
+<div class="card"><img src="https://cdn-icons-png.flaticon.com/512/1163/1163661.png" alt="Weather App">Weather Forecast App<br/><small>API • Async JS</small></div>
+<div class="card"><img src="https://cdn-icons-png.flaticon.com/512/1055/1055672.png" alt="Login Page">Interactive Login Page<br/><small>HTML • CSS • JavaScript (Validation)</small></div>
+</div>
 </section>
-
 <section id="mini">
-  <h2>Mini Projects</h2>
-  <div class="mini-projects">
-    <div class="mini">
-      <h3>Quiz</h3>
-      <p id="quizQ"></p>
-      <div id="quizOptions"></div>
-      <p id="quizResult"></p>
-      <button onclick="nextQuestion()">Next</button>
-    </div>
-    <div class="mini">
-      <h3>Text → Voice</h3>
-      <input id="tts" placeholder="Type text" style="width:100%;padding:8px;" />
-      <button onclick="speak()">Speak</button>
-    </div>
-    <div class="mini">
-      <h3>Theme</h3>
-      <button onclick="toggleTheme()">Toggle Theme</button>
-    </div>
-  </div>
+<h2>Mini Projects</h2>
+<div class="mini-projects">
+<div class="mini"><img src="https://cdn-icons-png.flaticon.com/512/2942/2942863.png" alt="Quiz Mini">Quiz<p id="quizQ"></p><div id="quizOptions"></div><p id="quizResult"></p><button onclick="nextQuestion()">Next</button></div>
+<div class="mini"><img src="https://cdn-icons-png.flaticon.com/512/3064/3064197.png" alt="TTS Mini">Text → Voice<input id="tts" placeholder="Type text" style="width:100%;padding:8px;"><button onclick="speak()">Speak</button></div>
+</div>
 </section>
-
 <section id="contact">
-  <h2>Contact</h2>
-  <p>Email: vimalrajvelayudham@email.com</p>
-  <p>LinkedIn: linkedin.com/in/vimalraj-velayudham-972169244</p>
-  <a href="VimalSoftCv.pdf.pdf" class="btn" download onclick="resumeNotice()">Download Resume</a>
+<h2>Contact</h2>
+<p>Email: vimalrajvelayudham@email.com</p>
+<p>LinkedIn: linkedin.com/in/vimalraj-velayudham-972169244</p>
+<a href="VimalSoftCv.pdf.pdf" class="btn" download onclick="resumeNotice()">Download Resume</a>
 </section>
-
 <footer>© 2025 Vimalraj</footer>
-
 <script>
-// Typing effect
-const roles = ['Java Developer','Web Developer','Problem Solver'];
-let r = 0, c = 0, del = false;
-const typing = document.getElementById('typing');
-(function typeLoop(){
-  const t = roles[r];
-  typing.textContent = del ? t.slice(0, --c) : t.slice(0, ++c);
-  if (!del && c === t.length) del = true;
-  if (del && c === 0) { del = false; r = (r + 1) % roles.length; }
-  setTimeout(typeLoop, del ? 80 : 120);
-})();
-
-// Robot interaction
-const messages = [
-  'Hello! I am your portfolio bot 🤖',
-  'Explore my skills section!',
-  'Check out my projects!',
-  'Built with Java and React'
-];
-let mi = 0;
-function robotTalk(){
-  const msg = document.getElementById('robotMsg');
-  msg.style.display = 'block';
-  msg.textContent = messages[mi];
-  mi = (mi + 1) % messages.length;
-}
-
-// Quiz logic
-const quiz = [
-  { q: 'Java is ___ oriented?', opts: ['Object','Script','Procedure'], a: 'Object' },
-  { q: 'Which keyword is used for inheritance in Java?', opts: ['this','extends','super'], a: 'extends' },
-  { q: 'Which hook is used for state in React?', opts: ['useData','useState','useEffect'], a: 'useState' }
-];
-let qi = 0;
-const quizQ = document.getElementById('quizQ');
-const quizOptions = document.getElementById('quizOptions');
-const quizResult = document.getElementById('quizResult');
-
-function loadQuiz(){
-  const q = quiz[qi];
-  quizQ.textContent = q.q;
-  quizResult.textContent = '';
-  quizOptions.innerHTML = '';
-  q.opts.forEach(opt => {
-    const btn = document.createElement('button');
-    btn.textContent = opt;
-    btn.onclick = () => checkAnswer(opt);
-    quizOptions.appendChild(btn);
-  });
-}
-
-function checkAnswer(ans){
-  quizResult.textContent = ans === quiz[qi].a ? 'Correct ✅' : 'Wrong ❌';
-}
-
-function nextQuestion(){
-  qi = (qi + 1) % quiz.length;
-  loadQuiz();
-}
-
+const roles=['Java Developer','Web Developer','Problem Solver'];
+let r=0,c=0,d=false;
+const typing=document.getElementById('typing');
+(function typeLoop(){const t=roles[r]; typing.textContent=d?t.slice(0,--c):t.slice(0,++c); if(!d&&c===t.length)d=true; if(d&&c===0){d=false;r=(r+1)%roles.length;} setTimeout(typeLoop,d?80:120);})();
+const messages=['Hello! I am your portfolio bot 🤖','Explore my skills section!','Check out my projects!','Built with Java and React'];
+let mi=0;
+const interactiveObj=document.getElementById('interactiveObject');
+interactiveObj.onclick=function(){const msg=document.getElementById('robotMsg'); msg.style.display='block'; msg.style.backdropFilter='none'; msg.style.background='rgba(0,0,0,0.85)'; msg.textContent=messages[mi]; mi=(mi+1)%messages.length;};
+const quiz=[{q:'Java is ___ oriented?',opts:['Object','Script','Procedure'],a:'Object'},{q:'Which keyword is used for inheritance in Java?',opts:['this','extends','super'],a:'extends'},{q:'Which hook is used for state in React?',opts:['useData','useState','useEffect'],a:'useState'}];
+let qi=0;
+const quizQ=document.getElementById('quizQ');
+const quizOptions=document.getElementById('quizOptions');
+const quizResult=document.getElementById('quizResult');
+function loadQuiz(){const q=quiz[qi]; quizQ.textContent=q.q; quizResult.textContent=''; quizOptions.innerHTML=''; q.opts.forEach(opt=>{const btn=document.createElement('button'); btn.textContent=opt; btn.onclick=()=>checkAnswer(opt); quizOptions.appendChild(btn);});}
+function checkAnswer(ans){quizResult.textContent=ans===quiz[qi].a?'Correct ✅':'Wrong ❌';}
+function nextQuestion(){qi=(qi+1)%quiz.length; loadQuiz();}
 loadQuiz();
-
-// Theme toggle
-function toggleTheme(){ document.body.classList.toggle('light'); }
-
-// Text to speech
-function speak(){ speechSynthesis.speak(new SpeechSynthesisUtterance(document.getElementById('tts').value)); }
-
-// Resume download notice
-function resumeNotice(){
-  alert('Your resume download has started.');
-}
-
-// Basic runtime checks (tests)
-console.assert(typeof nextQuestion === 'function', 'nextQuestion should be defined');
-console.assert(quiz.length > 0, 'Quiz should have questions');
+function speak(){speechSynthesis.speak(new SpeechSynthesisUtterance(document.getElementById('tts').value));}
+function resumeNotice(){alert('Your resume download has started.');}
+for(let i=0;i<50;i++){const light=document.createElement('div');light.className='moving-light';light.style.top=Math.random()*window.innerHeight+'px';light.style.left=Math.random()*window.innerWidth+'px';light.style.animationDuration=(5+Math.random()*10)+'s';document.body.appendChild(light);}
 </script>
 </body>
 </html>
